# tmdb-cli-tool

./: README.md  pyproject.toml  requirements.txt
tmdb_cli_tool/: __main__.py  cli.py  tmdb.py
